@@ -1,6 +1,10 @@
 Changes
 =======
 
+Next
+----
+- Add rio bounds command (#111).
+
 0.9 (2014-07-16)
 ----------------
 - Add meta and tag dumping options to rio_insp.
